// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseStoriesFile parses story file fixtures/Children.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": undefined,
    "title": undefined,
  },
  "stories": Array [
    Object {
      "id": undefined,
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Children prop, children content",
    },
    Object {
      "id": undefined,
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 8,
        },
        "start": Object {
          "column": 0,
          "line": 8,
        },
      },
      "name": "Children prop, empty body",
    },
    Object {
      "id": undefined,
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 10,
        },
        "start": Object {
          "column": 0,
          "line": 10,
        },
      },
      "name": "Children prop, no body",
    },
    Object {
      "id": undefined,
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 12,
        },
        "start": Object {
          "column": 0,
          "line": 12,
        },
      },
      "name": "No children prop, children content",
    },
  ],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file fixtures/Spread.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": undefined,
    "title": undefined,
  },
  "stories": Array [
    Object {
      "id": undefined,
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 15,
        },
        "start": Object {
          "column": 0,
          "line": 15,
        },
      },
      "name": undefined,
    },
  ],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/BasicCsf.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "example-basic-csf",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 11,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Example/Basic CSF",
  },
  "stories": Array [
    Object {
      "id": "example-basic-csf--primary",
      "location": Object {
        "end": Position {
          "column": 20,
          "line": 15,
        },
        "start": Position {
          "column": 13,
          "line": 15,
        },
      },
      "name": "Primary",
    },
    Object {
      "id": "example-basic-csf--secondary",
      "location": Object {
        "end": Position {
          "column": 22,
          "line": 20,
        },
        "start": Position {
          "column": 13,
          "line": 20,
        },
      },
      "name": "Secondary",
    },
    Object {
      "id": "example-basic-csf--large",
      "location": Object {
        "end": Position {
          "column": 18,
          "line": 25,
        },
        "start": Position {
          "column": 13,
          "line": 25,
        },
      },
      "name": "Large",
    },
    Object {
      "id": "example-basic-csf--small",
      "location": Object {
        "end": Position {
          "column": 18,
          "line": 31,
        },
        "start": Position {
          "column": 13,
          "line": 31,
        },
      },
      "name": "Small",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/CsfV1.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "example-csf-v1",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 3,
      },
      "start": Object {
        "column": 15,
        "line": 1,
      },
    },
    "title": "Example/CSF v1",
  },
  "stories": Array [
    Object {
      "id": "example-csf-v1--v-1-story-name",
      "location": Object {
        "end": Position {
          "column": 24,
          "line": 5,
        },
        "start": Position {
          "column": 13,
          "line": 5,
        },
      },
      "name": "Renamed via non-hoisted story",
    },
    Object {
      "id": "example-csf-v1--v-2-v-1-story-name",
      "location": Object {
        "end": Position {
          "column": 26,
          "line": 11,
        },
        "start": Position {
          "column": 13,
          "line": 11,
        },
      },
      "name": "v2 name override",
    },
    Object {
      "id": "example-csf-v1--v-2-v-1-story-name-empty",
      "location": Object {
        "end": Position {
          "column": 31,
          "line": 18,
        },
        "start": Position {
          "column": 13,
          "line": 18,
        },
      },
      "name": "V 2 V 1 Story Name Empty",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/CsfWithMdx.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": undefined,
    "title": undefined,
  },
  "stories": Array [
    Object {
      "id": undefined,
      "location": Object {
        "end": Position {
          "column": 18,
          "line": 11,
        },
        "start": Position {
          "column": 13,
          "line": 11,
        },
      },
      "name": "Story name from JS",
    },
    Object {
      "id": undefined,
      "location": Object {
        "end": Position {
          "column": 19,
          "line": 17,
        },
        "start": Position {
          "column": 13,
          "line": 17,
        },
      },
      "name": "Story name 2 from JS",
    },
    Object {
      "id": undefined,
      "location": Object {
        "end": Position {
          "column": 19,
          "line": 23,
        },
        "start": Position {
          "column": 13,
          "line": 23,
        },
      },
      "name": "Basic 3",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/CsfWithMdx.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": "example-mdx-importing-csf",
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 5,
      },
      "start": Object {
        "column": 0,
        "line": 5,
      },
    },
    "title": "Example/MDX importing CSF",
  },
  "stories": Array [
    Object {
      "id": "example-mdx-importing-csf--basic",
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 11,
        },
        "start": Object {
          "column": 0,
          "line": 11,
        },
      },
      "name": "Basic",
    },
    Object {
      "id": "example-mdx-importing-csf--basic-2",
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 21,
        },
        "start": Object {
          "column": 0,
          "line": 21,
        },
      },
      "name": "Story name from MDX",
    },
    Object {
      "id": "example-mdx-importing-csf--basic-3",
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 25,
        },
        "start": Object {
          "column": 0,
          "line": 25,
        },
      },
      "name": "Basic 3",
    },
  ],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/CustomId.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "manually-specified-csf-story-id",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 4,
      },
      "start": Object {
        "column": 15,
        "line": 1,
      },
    },
    "title": "Example/Custom ID CSF",
  },
  "stories": Array [
    Object {
      "id": "manually-specified-csf-story-id--story",
      "location": Object {
        "end": Position {
          "column": 18,
          "line": 6,
        },
        "start": Position {
          "column": 13,
          "line": 6,
        },
      },
      "name": "Story",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/CustomId.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": "manually-specified-mdx-id",
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "title": "Example/Custom ID MDX",
  },
  "stories": Array [
    Object {
      "id": "manually-specified-mdx-id--story",
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 7,
        },
        "start": Object {
          "column": 0,
          "line": 7,
        },
      },
      "name": "Story",
    },
  ],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/CustomName.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "example-custom-name",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 12,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Example/Custom Name",
  },
  "stories": Array [
    Object {
      "id": "example-custom-name--custom-name",
      "location": Object {
        "end": Position {
          "column": 23,
          "line": 16,
        },
        "start": Position {
          "column": 13,
          "line": 16,
        },
      },
      "name": "Custom story name",
    },
    Object {
      "id": "example-custom-name--overridden",
      "location": Object {
        "end": Position {
          "column": 23,
          "line": 22,
        },
        "start": Position {
          "column": 13,
          "line": 22,
        },
      },
      "name": "Custom story name override",
    },
    Object {
      "id": "example-custom-name--named-via-variable",
      "location": Object {
        "end": Position {
          "column": 29,
          "line": 29,
        },
        "start": Position {
          "column": 13,
          "line": 29,
        },
      },
      "name": "Custom story name var",
    },
    Object {
      "id": "example-custom-name--interpolated-name",
      "location": Object {
        "end": Position {
          "column": 29,
          "line": 36,
        },
        "start": Position {
          "column": 13,
          "line": 36,
        },
      },
      "name": "Custom story name var in template string",
    },
    Object {
      "id": "example-custom-name--empty-name",
      "location": Object {
        "end": Position {
          "column": 22,
          "line": 39,
        },
        "start": Position {
          "column": 13,
          "line": 39,
        },
      },
      "name": "Empty Name",
    },
    Object {
      "id": "example-custom-name--leading-whitespace",
      "location": Object {
        "end": Position {
          "column": 30,
          "line": 42,
        },
        "start": Position {
          "column": 13,
          "line": 42,
        },
      },
      "name": "     Leading whitespace",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/DeepTree.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "example-deep-tree-with-several-kinds",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 6,
      },
      "start": Object {
        "column": 15,
        "line": 3,
      },
    },
    "title": "Example/Deep/Tree/With/Several/Kinds",
  },
  "stories": Array [
    Object {
      "id": "example-deep-tree-with-several-kinds--story",
      "location": Object {
        "end": Position {
          "column": 18,
          "line": 10,
        },
        "start": Position {
          "column": 13,
          "line": 10,
        },
      },
      "name": "Story",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/DocsOnly.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": "example-mdx-docs-only",
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "title": "Example/MDX Docs Only",
  },
  "stories": Array [],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/DocsOnlyTop.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": "mdx-docs-at-top-level",
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "title": "MDX Docs at top level",
  },
  "stories": Array [],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/Excluded.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "test-exclusions-excluded",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 7,
      },
      "start": Object {
        "column": 15,
        "line": 4,
      },
    },
    "title": "Test/Exclusions/Excluded",
  },
  "stories": Array [
    Object {
      "id": "test-exclusions-excluded--other-export",
      "location": Object {
        "end": Position {
          "column": 24,
          "line": 2,
        },
        "start": Position {
          "column": 13,
          "line": 2,
        },
      },
      "name": "Other Export",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/ExportStyles.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "example-export-styles",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 11,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Example/Export Styles",
  },
  "stories": Array [
    Object {
      "id": "example-export-styles--normal-export",
      "location": Object {
        "end": Position {
          "column": 18,
          "line": 15,
        },
        "start": Position {
          "column": 6,
          "line": 15,
        },
      },
      "name": "Normal Export",
    },
    Object {
      "id": "example-export-styles--alternative-export-name",
      "location": Object {
        "end": Position {
          "column": 16,
          "line": 20,
        },
        "start": Position {
          "column": 6,
          "line": 20,
        },
      },
      "name": "Alternative Export Name",
    },
    Object {
      "id": "example-export-styles--export-name-overridden",
      "location": Object {
        "end": Position {
          "column": 29,
          "line": 25,
        },
        "start": Position {
          "column": 6,
          "line": 25,
        },
      },
      "name": "Override name 3",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/Form.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "example-form",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 5,
      },
      "start": Object {
        "column": 15,
        "line": 3,
      },
    },
    "title": "Example/Form",
  },
  "stories": Array [
    Object {
      "id": "example-form--form",
      "location": Object {
        "end": Position {
          "column": 17,
          "line": 7,
        },
        "start": Position {
          "column": 13,
          "line": 7,
        },
      },
      "name": "Form",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/Hoisting.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "example-hoisting",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 7,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Example/Hoisting",
  },
  "stories": Array [
    Object {
      "id": "example-hoisting--hoisting",
      "location": Object {
        "end": Position {
          "column": 21,
          "line": 3,
        },
        "start": Position {
          "column": 13,
          "line": 3,
        },
      },
      "name": "Hoisting",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/Included.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "test-exclusions-included",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 7,
      },
      "start": Object {
        "column": 15,
        "line": 4,
      },
    },
    "title": "Test/Exclusions/Included",
  },
  "stories": Array [
    Object {
      "id": "test-exclusions-included--included-export",
      "location": Object {
        "end": Position {
          "column": 27,
          "line": 1,
        },
        "start": Position {
          "column": 13,
          "line": 1,
        },
      },
      "name": "Included Export",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/JsxExtension.stories.jsx 1`] = `
Object {
  "meta": Object {
    "id": "example-jsx-extension",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 3,
      },
      "start": Object {
        "column": 15,
        "line": 1,
      },
    },
    "title": "Example/JSX extension",
  },
  "stories": Array [
    Object {
      "id": "example-jsx-extension--story",
      "location": Object {
        "end": Position {
          "column": 18,
          "line": 5,
        },
        "start": Position {
          "column": 13,
          "line": 5,
        },
      },
      "name": "Story",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/MdxWithStories.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": "example-mdx-with-stories",
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 6,
      },
      "start": Object {
        "column": 0,
        "line": 6,
      },
    },
    "title": "Example/MDX with Stories",
  },
  "stories": Array [
    Object {
      "id": "example-mdx-with-stories--mdx-first-story",
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 10,
        },
        "start": Object {
          "column": 0,
          "line": 10,
        },
      },
      "name": "MDX first story",
    },
    Object {
      "id": "example-mdx-with-stories--mdx-second-story",
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 14,
        },
        "start": Object {
          "column": 0,
          "line": 14,
        },
      },
      "name": "MDX second story",
    },
    Object {
      "id": "example-mdx-with-stories--mdx-story-3",
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 18,
        },
        "start": Object {
          "column": 0,
          "line": 18,
        },
      },
      "name": "MDX Story 3",
    },
  ],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/MdxWithStoriesTop.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": "mdx-with-stories-top",
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 4,
      },
      "start": Object {
        "column": 0,
        "line": 4,
      },
    },
    "title": "MDX with stories, top",
  },
  "stories": Array [
    Object {
      "id": "mdx-with-stories-top--mdx-with-stories-top",
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 6,
        },
        "start": Object {
          "column": 0,
          "line": 6,
        },
      },
      "name": "MDX with stories, top",
    },
  ],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/MergeOne.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "example-merge",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 3,
      },
      "start": Object {
        "column": 15,
        "line": 1,
      },
    },
    "title": "Example/Merge",
  },
  "stories": Array [
    Object {
      "id": "example-merge--one",
      "location": Object {
        "end": Position {
          "column": 16,
          "line": 5,
        },
        "start": Position {
          "column": 13,
          "line": 5,
        },
      },
      "name": "One",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/MergeTwo.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "example-merge",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 3,
      },
      "start": Object {
        "column": 15,
        "line": 1,
      },
    },
    "title": "Example/Merge",
  },
  "stories": Array [
    Object {
      "id": "example-merge--two",
      "location": Object {
        "end": Position {
          "column": 16,
          "line": 5,
        },
        "start": Position {
          "column": 13,
          "line": 5,
        },
      },
      "name": "Two",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/Precedence.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": "example-precedence",
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 4,
      },
      "start": Object {
        "column": 0,
        "line": 4,
      },
    },
    "title": "Example/Precedence",
  },
  "stories": Array [
    Object {
      "id": "example-precedence--small",
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 20,
        },
        "start": Object {
          "column": 0,
          "line": 20,
        },
      },
      "name": "Story with name, story, body",
    },
    Object {
      "id": "example-precedence--story-with-name-body",
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 26,
        },
        "start": Object {
          "column": 0,
          "line": 26,
        },
      },
      "name": "Story with name, body",
    },
  ],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/SameName.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "example-with-same-name",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 8,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Example/With Same Name",
  },
  "stories": Array [
    Object {
      "id": "example-with-same-name--same-name",
      "location": Object {
        "end": Position {
          "column": 21,
          "line": 12,
        },
        "start": Position {
          "column": 13,
          "line": 12,
        },
      },
      "name": "Same Name",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/SameNameChild.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "example-with-same-name-same-name",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 8,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Example/With Same Name/Same Name",
  },
  "stories": Array [
    Object {
      "id": "example-with-same-name-same-name--nested-story",
      "location": Object {
        "end": Position {
          "column": 24,
          "line": 12,
        },
        "start": Position {
          "column": 13,
          "line": 12,
        },
      },
      "name": "Nested Story",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/StoryDeclarations.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "test-story-declarations",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 3,
      },
      "start": Object {
        "column": 6,
        "line": 1,
      },
    },
    "title": "Test/Story Declarations",
  },
  "stories": Array [
    Object {
      "id": "test-story-declarations--const-declarator",
      "location": Object {
        "end": Position {
          "column": 28,
          "line": 7,
        },
        "start": Position {
          "column": 13,
          "line": 7,
        },
      },
      "name": "Const Declarator",
    },
    Object {
      "id": "test-story-declarations--separate-declarator",
      "location": Object {
        "end": Position {
          "column": 24,
          "line": 9,
        },
        "start": Position {
          "column": 6,
          "line": 9,
        },
      },
      "name": "Separate Declarator",
    },
    Object {
      "id": "test-story-declarations--separate-declarator-2",
      "location": Object {
        "end": Position {
          "column": 25,
          "line": 10,
        },
        "start": Position {
          "column": 6,
          "line": 10,
        },
      },
      "name": "Separate declarator with story name",
    },
    Object {
      "id": "test-story-declarations--multiple-one",
      "location": Object {
        "end": Position {
          "column": 24,
          "line": 15,
        },
        "start": Position {
          "column": 13,
          "line": 15,
        },
      },
      "name": "Multiple One",
    },
    Object {
      "id": "test-story-declarations--multiple-two",
      "location": Object {
        "end": Position {
          "column": 13,
          "line": 16,
        },
        "start": Position {
          "column": 2,
          "line": 16,
        },
      },
      "name": "Multiple two (given name)",
    },
    Object {
      "id": "test-story-declarations--function-story",
      "location": Object {
        "end": Position {
          "column": 29,
          "line": 20,
        },
        "start": Position {
          "column": 16,
          "line": 20,
        },
      },
      "name": "Renamed Function Story",
    },
    Object {
      "id": "test-story-declarations--separate-function-story",
      "location": Object {
        "end": Position {
          "column": 30,
          "line": 25,
        },
        "start": Position {
          "column": 9,
          "line": 25,
        },
      },
      "name": "Separate Function Story",
    },
    Object {
      "id": "test-story-declarations--separate-function-story-2",
      "location": Object {
        "end": Position {
          "column": 31,
          "line": 29,
        },
        "start": Position {
          "column": 9,
          "line": 29,
        },
      },
      "name": "Separate function story with story name",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/TitleInterpolation.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "example-title-interpolation",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 10,
      },
      "start": Object {
        "column": 15,
        "line": 7,
      },
    },
    "title": "Example/Title Interpolation",
  },
  "stories": Array [
    Object {
      "id": "example-title-interpolation--primary",
      "location": Object {
        "end": Position {
          "column": 20,
          "line": 14,
        },
        "start": Position {
          "column": 13,
          "line": 14,
        },
      },
      "name": "Primary",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/Top.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "top",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 8,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Top",
  },
  "stories": Array [
    Object {
      "id": "top--top-level-story",
      "location": Object {
        "end": Position {
          "column": 26,
          "line": 12,
        },
        "start": Position {
          "column": 13,
          "line": 12,
        },
      },
      "name": "Top Level Story",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/TopHoisted.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "top-hoisted",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 8,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Top Hoisted",
  },
  "stories": Array [
    Object {
      "id": "top-hoisted--top-hoisted",
      "location": Object {
        "end": Position {
          "column": 23,
          "line": 12,
        },
        "start": Position {
          "column": 13,
          "line": 12,
        },
      },
      "name": "Top Hoisted",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/TypeScript.stories.tsx 1`] = `
Object {
  "meta": Object {
    "id": "test-typescript-sample",
    "location": Object {
      "end": Object {
        "column": 9,
        "line": 19,
      },
      "start": Object {
        "column": 15,
        "line": 17,
      },
    },
    "title": "Test/TypeScript/Sample",
  },
  "stories": Array [
    Object {
      "id": "test-typescript-sample--type-script-story",
      "location": Object {
        "end": Position {
          "column": 28,
          "line": 3,
        },
        "start": Position {
          "column": 13,
          "line": 3,
        },
      },
      "name": "Type Script Story",
    },
    Object {
      "id": "test-typescript-sample--type-script-typed-story",
      "location": Object {
        "end": Position {
          "column": 40,
          "line": 5,
        },
        "start": Position {
          "column": 13,
          "line": 5,
        },
      },
      "name": "Type Script Typed Story",
    },
    Object {
      "id": "test-typescript-sample--type-script-typed-generic-story",
      "location": Object {
        "end": Position {
          "column": 51,
          "line": 9,
        },
        "start": Position {
          "column": 13,
          "line": 9,
        },
      },
      "name": "Type Script Typed Generic Story",
    },
    Object {
      "id": "test-typescript-sample--type-script-type-assertion-story",
      "location": Object {
        "end": Position {
          "column": 41,
          "line": 13,
        },
        "start": Position {
          "column": 13,
          "line": 13,
        },
      },
      "name": "Type Script Type Assertion Story",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/TypeScriptAsMeta.stories.ts 1`] = `
Object {
  "meta": Object {
    "id": "test-typescript-default-as-meta",
    "location": Object {
      "end": Object {
        "column": 9,
        "line": 7,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Test/TypeScript/Default as Meta",
  },
  "stories": Array [
    Object {
      "id": "test-typescript-default-as-meta--type-script-story",
      "location": Object {
        "end": Position {
          "column": 28,
          "line": 3,
        },
        "start": Position {
          "column": 13,
          "line": 3,
        },
      },
      "name": "Type Script Story",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/TypeScriptIdentifier.stories.ts 1`] = `
Object {
  "meta": Object {
    "id": "test-typescript-typed-identifier",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 7,
      },
      "start": Object {
        "column": 6,
        "line": 5,
      },
    },
    "title": "Test/TypeScript/Typed Identifier",
  },
  "stories": Array [
    Object {
      "id": "test-typescript-typed-identifier--type-script-story",
      "location": Object {
        "end": Position {
          "column": 28,
          "line": 3,
        },
        "start": Position {
          "column": 13,
          "line": 3,
        },
      },
      "name": "Type Script Story",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/TypeScriptIdentifierAsMeta.stories.ts 1`] = `
Object {
  "meta": Object {
    "id": "test-typescript-identifier-exported-as-meta",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 8,
      },
      "start": Object {
        "column": 6,
        "line": 6,
      },
    },
    "title": "Test/TypeScript/Identifier Exported as Meta",
  },
  "stories": Array [
    Object {
      "id": "test-typescript-identifier-exported-as-meta--type-script-story",
      "location": Object {
        "end": Position {
          "column": 28,
          "line": 3,
        },
        "start": Position {
          "column": 13,
          "line": 3,
        },
      },
      "name": "Type Script Story",
    },
  ],
  "type": "csf",
}
`;
